Fix project scrollbar area
- Fixed issue where the project scrollbar area had a darker area, when it should have been hidden

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -138,3 +138,12 @@ body {
 .scrollbar-auto-hide:hover::-webkit-scrollbar-thumb {
   background: rgba(255, 255, 255, 0.2);
 }
+
+.project-modal-scroll {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.project-modal-scroll::-webkit-scrollbar {
+  display: none;
+}
